Added endpoint for getting all jobs
