# docs/swagger.json
@@ -27,6 +27,32 @@
                     }
                 }
             }
+        },
+        "/jobs": {
+            "get": {
+                "description": "Gets all jobs ordered by priority",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Jobs"
+                ],
+                "summary": "Get all jobs",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/main.Job"
+                            }
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -35,6 +61,20 @@
             "properties": {
                 "message": {
                     "type": "string"
+                }
+            }
+        },
+        "main.Job": {
+            "type": "object",
+            "properties": {
+                "description": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "priority": {
+                    "type": "integer"
                 }
             }
         }
